--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>amit</title> 
+    <meta charset="UTF-8"/>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tic-Tac-Toe Game</title> 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="msg-container hide">
+        <p id="msg">Winner</p>
+        <button id="new-btn">New Game</button>
+
+    </div>
     <main>
         <h1>Tic Tac Toe</h1>
         <div class="container">
@@ -21,7 +28,7 @@
             <button class="box"></button>
         </div>
     </div>
-    <button id="reset-btn">Reset Button</button>
+    <button id="reset-btn">Reset Game</button>
     </main>
     <script src="app.js"></script>
     
